Update title and styles for letter card

--- a/index.html
+++ b/index.html
@@ -3,159 +3,83 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Dedicatoria</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <title>Dedicatoria — Carta 3D</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg-1:#ff9a9e;
-      --bg-2:#fad0c4;
-      --card:#ffffffee;
-      --accent:#ff6b6b;
+      --bg1:hsl(300, 100%, 100%);
+      --bg2:#dba3b6;
+      --accent:#ff6b8a;
       --muted:#6b6b6b;
+      --shadow:0 10px 30px rgba(17,17,17,0.08);
     }
-    *{box-sizing:border-box}
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%;overflow:hidden}
     body{
-      margin:0;
-      min-height:100vh;
-      font-family:Montserrat,system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial;
-      background: linear-gradient(135deg,var(--bg-1),var(--bg-2));
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:32px;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
+      font-family:Montserrat,system-ui,Segoe UI,Roboto,Helvetica Neue,Arial;background:linear-gradient(180deg,var(--bg1),var(--bg2));display:flex;align-items:center;justify-content:center;padding:32px;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;
     }
-
-    .stage{position:relative;width:100%;max-width:900px}
-
-    .card{
-      background:var(--card);
-      border-radius:18px;
-      padding:36px;
-      box-shadow:0 10px 30px rgba(0,0,0,0.12);
-      position:relative;
-      overflow:hidden;
-    }
-
-    .header{
-      display:flex;align-items:center;gap:16px;margin-bottom:8px
-    }
-    .avatar{
-      width:72px;height:72px;border-radius:12px;background:linear-gradient(135deg,#fff2,#fff0);display:flex;align-items:center;justify-content:center;font-size:28px;font-weight:700;color:var(--accent);box-shadow:0 6px 18px rgba(0,0,0,0.06)
-    }
-    h1{font-family:'Playfair Display',serif;margin:0;font-size:28px}
-    p.lead{margin:6px 0 22px;color:var(--muted)}
-
-    .message{
-      font-size:18px;line-height:1.5;margin-bottom:18px;padding:18px;border-radius:12px;background:linear-gradient(180deg, #ffffff, #fff9);
-    }
-
-    .meta{display:flex;gap:12px;align-items:center}
+    .scene{width:100%;max-width:920px;perspective:1200px}
+    .card-wrap{width:720px;height:460px;margin:0 auto;position:relative;transform-style:preserve-3d;transition:transform .3s ease}
+    .envelope{width:100%;height:100%;position:relative;transform-style:preserve-3d;transition:transform 1s cubic-bezier(.2,.9,.25,1);transform-origin:top center;box-shadow:var(--shadow);border-radius:16px;overflow:visible}
+    .body{position:absolute;inset:0;background:linear-gradient(180deg,#fff,#fff9);border-radius:14px;padding:40px 40px 60px;display:flex;flex-direction:column;justify-content:flex-end;align-items:flex-start;transform:translateZ(-0.5px)}
+    .to{font-family:'Playfair Display',serif;font-size:22px;margin:0 0 6px}
+    .subtitle{color:var(--muted);font-size:13px;margin:0 0 14px}
+    .flap{position:absolute;left:0;right:0;top:0;height:58%;border-top-left-radius:16px;border-top-right-radius:16px;background:linear-gradient(180deg,#ffeff3,#fff);transform-origin:top center;z-index:3;display:flex;align-items:center;justify-content:center;cursor:pointer;transition:transform 0.9s cubic-bezier(.2,.9,.25,1);box-shadow:0 8px 20px rgba(0,0,0,0.06)}
+    .seal{width:96px;height:96px;border-radius:50%;background:linear-gradient(180deg,var(--accent),#ff3f6b);display:flex;align-items:center;justify-content:center;color:white;font-size:30px;box-shadow:0 8px 18px rgba(255,107,139,0.24);transform:translateZ(35px);transition:transform 0.18s ease}
+    .seal:active{transform:translateZ(30px) scale(0.97)}
+    .inner{position:absolute;left:12%;right:12%;top:18%;bottom:12%;background:linear-gradient(180deg,#fff,#fffefc);border-radius:10px;padding:34px;font-family:'Playfair Display',serif;font-size:18px;color:#222;transform-origin:top center;transform:translateZ(-40px) rotateX(0deg);box-shadow:0 8px 24px rgba(0,0,0,0.06);transition:transform 1s cubic-bezier(.2,.9,.25,1),opacity 0.6s;overflow-y:auto}
+    .closed .flap{transform:rotateX(0deg)}
+    .closed .inner{opacity:0;transform:translateY(8px) translateZ(-40px) rotateX(14deg)}
+    .open .flap{transform:rotateX(-160deg)}
+    .open .inner{opacity:1;transform:translateY(0) translateZ(0) rotateX(0deg)}
+    .meta{display:flex;gap:8px;align-items:center;margin-top:14px}
     .from{font-weight:700;color:var(--accent)}
-
-    .controls{display:flex;gap:8px;flex-wrap:wrap;margin-top:18px}
-    .btn{padding:10px 14px;border-radius:10px;border:0;cursor:pointer;font-weight:600}
-    .btn.primary{background:var(--accent);color:white}
-    .btn.ghost{background:transparent;border:1px solid rgba(0,0,0,0.06)}
-
-    .floating-hearts{position:absolute;inset:0;pointer-events:none}
-    .heart{
-      position:absolute;width:28px;height:28px;transform:translate(-50%,-50%) scale(0.9);
-      opacity:0;animation:floatUp 3.6s linear infinite;
-      filter:drop-shadow(0 6px 8px rgba(0,0,0,0.08));
-    }
+    .hearts-rain{position:absolute;inset:0;pointer-events:none;overflow:hidden}
+    .heart{position:absolute;left:50%;width:28px;height:28px;transform:translateX(-50%);opacity:0;filter:blur(6px);animation:fall 3s linear forwards}
     .heart svg{width:100%;height:100%}
-
-    @keyframes floatUp{
-      0%{transform:translate(-50%,20px) scale(0.6);opacity:0}
-      10%{opacity:1}
-      50%{transform:translate(-50%,-60px) scale(1)}
-      100%{transform:translate(-50%,-200px) scale(0.8);opacity:0}
-    }
-
-    /* small screen tweaks */
-    @media (max-width:520px){
-      .card{padding:20px}
-      h1{font-size:22px}
-      .avatar{width:56px;height:56px}
-      .message{font-size:16px}
-    }
-
-    /* little confetti pulse when clicking send */
-    .pulse{
-      position:absolute;inset:0;pointer-events:none;mix-blend-mode:screen
-    }
-    .hidden{display:none}
+    @keyframes fall{0%{transform:translateY(-20vh) translateX(0) scale(0.7);opacity:0}10%{opacity:0.9}100%{transform:translateY(120vh) translateX(40px) scale(1.05);opacity:0}}
+    @media (max-width:780px){.card-wrap{width:90vw;height:56vw}.inner{left:6%;right:6%;top:20%;bottom:12%;padding:22px}.seal{width:76px;height:76px;font-size:26px}.to{font-size:18px}}
+    .bg-dots{position:absolute;inset:-20%;background-image:radial-gradient(rgba(255,107,139,0.06) 1px,transparent 1px);background-size:24px 24px;opacity:0.9;pointer-events:none}
+    .letter-title{font-size:20px;margin:0 0 8px}
+    .letter-body{font-size:17px;line-height:1.6;color:#333;margin-top:6px;font-family:Montserrat,system-ui,Arial}
+    .toggle-btn{position:absolute;bottom:12px;right:12px;background:var(--accent);color:white;border:0;border-radius:8px;padding:8px 14px;font-weight:600;cursor:pointer;box-shadow:0 4px 10px rgba(0,0,0,0.12);display:none}
+    .open .toggle-btn{display:block}
   </style>
 </head>
 <body>
-  <div class="stage">
-    <div class="card" id="card">
-      <div class="header">
-        <div class="avatar" id="avatar">💌</div>
-        <div>
-          <h1 id="title">Para: <span id="recipient">Chowii</span></h1>
-          <p class="lead" id="subtitle">Un pequeño detalle hecho con cariño.</p>
+  <div class="scene">
+    <div class="card-wrap" id="wrap">
+      <div class="envelope closed" id="envelope">
+        <div class="flap" id="flap" role="button" aria-label="Abrir carta"><div class="seal" id="seal">❤</div></div>
+        <div class="body"><div><h3 class="to">Para: <strong>Chowii</strong></h3><p class="subtitle">Un pequeño detalle hecho con cariño.</p></div></div>
+        <div class="inner" id="inner">
+          <h2 class="letter-title">Para: Chowii</h2>
+          <div class="letter-body"><p>Al haberte conocido mi vida se volvió un poquito más alegre. Me encanta tu forma de ser, tu sonrisa, lo linda que eres y la manera en que haces que todo parezca más sencillo. Sé que no te lo he dicho, pero me gusta mucho tenerte cerca, y estoy realmente feliz de haberte conocido.</p><p style="margin-top:18px;font-weight:700">De: David</p></div>
+          <button class="toggle-btn" id="toggleBtn">Cerrar carta</button>
         </div>
       </div>
-
-      <div class="message" id="message">Al haberte conocido mi vida se volvió un poquito más alegre. Me encanta tu forma de ser, tu sonrisa, lo linda que eres y la manera en que haces que todo parezca más sencillo. Se que no te lo he dicho, pero me gusta mucho tenerte cerca, y estoy realmente feliz de haberte conocido.</div>
-
-      <div class="meta">
-        <div class="from">De: <span id="sender">David</span></div>
-        <div style="color:var(--muted);font-size:13px">• <span id="date"></span></div>
-      </div>
-
-      <div class="controls">
-        <button class="btn primary" id="editBtn">Editar</button>
-        <button class="btn ghost" id="copyBtn">Copiar texto</button>
-        <button class="btn ghost" id="themeBtn">Cambiar tema</button>
-      </div>
-
-      <div class="pulse hidden" id="pulseArea"></div>
+      <div class="hearts-rain" id="hearts"></div>
+      <div class="bg-dots"></div>
     </div>
-
-    <div class="floating-hearts" id="hearts"></div>
   </div>
-
   <script>
-    // --- Configurables (edita aquí si quieres cambiar el texto por defecto) ---
-    const DEFAULT = {
-      recipient: "Amor",
-      sender: "David",
-      message: "Gracias por cada risa, por tu paciencia y por hacer que lo simple se sienta extraordinario. Te dedico esto con todo mi cariño.",
-      subtitle: "Un detalle hecho con cariño",
-    };
+    const envelope=document.getElementById('envelope');
+    const flap=document.getElementById('flap');
+    const seal=document.getElementById('seal');
+    const hearts=document.getElementById('hearts');
+    const toggleBtn=document.getElementById('toggleBtn');
+    const wrap=document.getElementById('wrap');
+    let opened=false;
+    function spawnHeart(){const h=document.createElement('div');h.className='heart';h.style.left=Math.random()*100+'%';h.style.top='-10%';h.style.animationDuration=(3+Math.random()*1.8)+'s';h.innerHTML='<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 21s-7.5-4.92-9.25-8.04C.84 9.9 4.1 5 8.5 6.5 10.07 7.1 11 8.5 12 9.5c1-1 1.93-2.4 3.5-3 4.4-1.5 7.66 3.4 5.75 6.96C19.5 16.08 12 21 12 21z" fill="rgba(255,90,130,0.95)"/></svg>';hearts.appendChild(h);setTimeout(()=>h.remove(),5200+Math.random()*800)}
+    function startRain(){let i=0;const total=30;const iv=setInterval(()=>{spawnHeart();i++;if(i>=total)clearInterval(iv)},120)}
+    flap.addEventListener('click',()=>{if(opened)return;opened=true;envelope.classList.remove('closed');envelope.classList.add('open');seal.animate([{transform:'translateZ(35px) scale(1)'},{transform:'translateZ(60px) scale(1.12)'},{transform:'translateZ(35px) scale(1)'}],{duration:500,easing:'cubic-bezier(.2,.9,.25,1)'});startRain();setTimeout(()=>startRain(),800);setTimeout(()=>startRain(),1600)});
+    toggleBtn.addEventListener('click',()=>{if(opened){opened=false;envelope.classList.remove('open');envelope.classList.add('closed');toggleBtn.textContent='Abrir carta';}else{opened=true;envelope.classList.remove('closed');envelope.classList.add('open');toggleBtn.textContent='Cerrar carta';startRain();}});
+    flap.tabIndex=0;flap.addEventListener('keydown',e=>{if(e.key==='Enter'||e.key===' ')flap.click()});
+    // Tilt effect only on PC
+    const isMobile=/Mobi|Android|iPhone/i.test(navigator.userAgent);
+    if(!isMobile){wrap.addEventListener('mousemove',e=>{const r=wrap.getBoundingClientRect();const cx=r.left+r.width/2;const cy=r.top+r.height/2;const dx=(e.clientX-cx)/r.width;const dy=(e.clientY-cy)/r.height;const rx=dy*-6;const ry=dx*10;envelope.style.transform=`rotateX(${rx}deg) rotateY(${ry}deg)`});wrap.addEventListener('mouseleave',()=>{envelope.style.transform='rotateX(0deg) rotateY(0deg)'})}
+    else{document.body.style.padding='10px';wrap.style.width='95vw';wrap.style.height='70vw';}
+  </script>
 
-    // --- Init ---
-    const recipientEl = document.getElementById('recipient');
-    const senderEl = document.getElementById('sender');
-    const messageEl = document.getElementById('message');
-    const subtitleEl = document.getElementById('subtitle');
-    const dateEl = document.getElementById('date');
-
-    function setDefaults(){
-      recipientEl.textContent = DEFAULT.recipient;
-      senderEl.textContent = DEFAULT.sender;
-      messageEl.textContent = DEFAULT.message;
-      subtitleEl.textContent = DEFAULT.subtitle;
-      dateEl.textContent = new Date().toLocaleDateString();
-    }
-    setDefaults();
-
-    // --- Floating hearts generator ---
-    const heartsContainer = document.getElementById('hearts');
-    function spawnHeart(){
-      const h = document.createElement('div');
-      h.className = 'heart';
-      const left = Math.random()*100;
-      const delay = Math.random()*2;
-      h.style.left = left+'%';
-      h.style.bottom = '-10%';
-      h.style.animationDelay = delay+'s';
-      h.innerHTML = `
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M12 21s-7.5-4.92-9.25-8.04C.84 9.9 4.1 5 8.5 6.5 10.07 7.1 11 8.5 12 9.5c1-1 1.93-2.4 3.5-3 4.4-1.5 7.66 3.4 5.75 6.96C19.5 16.08 12 21 12 21z" fill="white" opacity="0.95"/>
-        </svg>`;
-      heartsContainer.appe
+</body>
+</html>
